--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
-  "name": "check for localStorage value - demo",
+  "name": "localStorage Demo App",
   "author": {
     "name": "@jeremiahcurrier",
     "email": "hello@jeremiahcurrier.com",
-    "url": "https://jeremiahcurrier.com"
+    "url": ""
   },
   "defaultLocale": "en",
   "private": true,
-  "location": "ticket_sidebar",
+  "location": ["ticket_sidebar", "new_ticket_sidebar"],
   "version": "1.0",
   "frameworkVersion": "1.0"
 }
